# repo-analysis-tools

./: .gitignore  .mcp.json  AGENT.md  Agent.md  README.md  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
docs/: architecture.md  gpt5.4proreview.md  gpt5.4proreview2.md  self-use-launch.md
docs/contracts/: mcp-tool-contracts.md
migration/: capability-mapping.md  keep-drop-rewrite.md  old-repo-inventory.md
src/repo_analysis_tools/: __init__.py
tests/contract/: __init__.py  test_tool_contracts.py
tests/e2e/: __init__.py  test_analysis_writing_easyflash.py  test_change_impact_easyflash.py  test_export_easyflash.py  test_repo_understand_easyflash.py  test_self_use_launch_easyflash.py
tests/fixtures/: __init__.py  easyflash_repo.py  git_helpers.py  query_path_repo.py  query_repo.py  scope_first_repo.py
tests/golden/: __init__.py  harness.py  test_contract_golden.py
tests/integration/: __init__.py  test_analysis_writing_workflow.py  test_change_impact_workflow.py  test_export_reuse_workflow.py  test_mainline_mcp_workflow.py  test_minimal_query_workflow.py  test_repo_doc_writer_workflow.py  test_self_use_demo.py
tests/smoke/: __init__.py  test_mcp_server.py  test_package_layout.py
tests/unit/: __init__.py  test_anchor_service.py  test_architecture_docs.py  test_client_bootstrap_assets.py  test_client_skill_distribution.py  test_document_dsl.py  test_evidence_service.py  test_export_service.py  test_fixture_repos.py  test_impact_service.py  (+10 more)
tools/: run_self_use_demo.py  validate_mermaid.mjs  write_repo_design_docs.py
(+123 files in other folders)
